[package]
name = "syrup"
version = "0.1.0"
authors = ["Matt Button <matthew@sigswitch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
visca = { git = "https://github.com/leocassarani/visca", branch = "prototype" }
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde = { version = "1.0.97", features = ["derive"] }
